# aegis-scaffolding

./: .gitignore  COGNITIVE_AUTONOMY_IMPLEMENTATION.md  COGNITIVE_GAPS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements-lock.txt  test_basic_functionality.py  test_identity_core_demo.py
data/: sam.db  test_sam.db
data/test_vectors.lancedb/vectors.lance/_transactions/: 0-a4a8b5b5-4f3e-470c-bfa6-7eaa8d193a9c.txn  1-7b267640-2ab7-4b64-971b-de058969235d.txn  2-e14e2a0d-3d8b-4d78-9afd-81871305f90d.txn
data/test_vectors.lancedb/vectors.lance/_versions/: 1.manifest  2.manifest  3.manifest
data/test_vectors.lancedb/vectors.lance/data/: aea3c56e-5c14-4bb2-b20c-6861ec74158b.lance
data/vectors.lancedb/vectors.lance/_transactions/: 0-2e1d7eb4-bd3b-43c2-92e5-9ba4ab54eb3c.txn  1-bb60268c-66c8-476e-a619-cd18550b0de0.txn
data/vectors.lancedb/vectors.lance/_versions/: 1.manifest  2.manifest
data/vectors.lancedb/vectors.lance/data/: bb1bbd2e-1795-4eda-85a6-21f8d3cfda7a.lance
sam/: __init__.py  cli.py
sam/api/: __init__.py  fast.py
sam/core/: __init__.py  cdp.py  identity_core.py  psp.py  raa_cycle.py  schema_firewall.py  schema_synthesis.py  vsp_engine.py
sam/interop/: __init__.py
sam/memory/: __init__.py  latent_asset_vault.py  maal.py  qualia_blocks.py  rel_sqlite.py
sam/models/: __init__.py  embedding_adapter_manager.py  embedding_adapters.py  embedding_minilm.py  llm_adapters.py
sam/ops/: bootstrap.py  config.yaml
sam/security/: __init__.py  keystore.py
sam/ui/: __init__.py
sam/utils/: __init__.py  config.py  crypto.py  logging.py
tests/: __init__.py  test_identity_core.py  test_integration_relational.py  test_psp.py  test_vsp_engine.py
